test/kobra-code/syntax-errors/semicolon.ks
$ a = 41; // Semicolons will not be allowed in KobraScript.
$ b = 40